@@ -6,15 +6,15 @@
 ########################## WARNING ###############################
 
 {% if frontend.mode == "filebeat" %}
-{% if frontend.api_parser_use_proxy -%}
+{% if frontend.filebeat_listening_mode == "api" and frontend.api_parser_use_proxy -%}
 {% if frontend.api_parser_custom_proxy -%}
 # env.http_proxy: "{{ frontend.api_parser_custom_proxy }}"
 # env.https_proxy: "{{ frontend.api_parser_custom_proxy }}"
 # env.ftp_proxy: "{{ frontend.api_parser_custom_proxy }}"
 {% else -%}
 # use_system_proxy=yes
-{% endif -%}{# if frontend.api_parser_custom_proxy #}
-{% endif %}{# if frontend.api_parser_use_proxy #}
+{% endif -%} {# if frontend.api_parser_custom_proxy #}
+{% endif %} {# if frontend.filebeat_listening_mode == "api" and frontend.api_parser_use_proxy #}
 
 filebeat.inputs:
 # Create a 'fake' entry to have at least a working input
@@ -23,7 +23,7 @@ filebeat.inputs:
   path: "/var/run/filebeat-input.sock"
 
 {% if frontend.filebeat_module == "_custom" %}
-- type: {% if frontend.filebeat_listening_mode == "file" %}log{% else %}{{ frontend.filebeat_listening_mode}}{% endif %}
+- type: {% if frontend.filebeat_listening_mode == "file" %}log{% else %}{{ frontend.filebeat_listening_mode }}{% endif %}
 {{ frontend.generate_filebeat_conf()|indent(2) }}
 
 {% else %}
@@ -34,9 +34,11 @@ filebeat.modules:
 
 output.redis:
   hosts: [ "redis://{{frontend.redis_server}}:{{frontend.redis_port}}" ]
-  {% if frontend.redis_password|length %}
+  {% if frontend.redis_password|length -%}
   password: "{{frontend.redis_password}}"
-  {% endif %}
+  {% elif redis_password|length -%}
+  password: "{{redis_password}}"
+  {%- endif %}
   key: "filebeat_{{frontend.tenants_config.id}}_{{frontend.id}}"
   datatype: list
   db: 0
