@@ -51,7 +51,11 @@ module(load="omuxsock")
     input(type="imhiredis"
         Server="{{ frontend.redis_server }}"
         Port="{{ frontend.redis_port }}"
+        {% if frontend.redis_password -%}
         Password="{{ frontend.redis_password }}"
+        {% elif redis_password -%}
+        Password="{{ redis_password }}"
+        {%- endif %}
         Key="filebeat_{{ frontend.tenants_config.id }}_{{ frontend.id }}"
         Mode="queue"
         Uselpop="on"
@@ -113,7 +117,7 @@ module(load="omuxsock")
                 RateLimit.Burst="{{ frontend.ratelimit_burst }}"
                 {%- endif %}
                 RuleSet="{{ frontend.get_ruleset() }}")
-        {% elif "relp" in frontend.listening_mode %}
+        {% elif frontend.listening_mode == "relp" %}
             input(type="imrelp"
                 {{ listener.generate_rsyslog_conf() }}
                 RuleSet="{{ frontend.get_ruleset() }}")
